--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-picker/picker": "^2.11.1",
-    "@react-navigation/drawer": "^7.5.2",
     "@react-navigation/native": "^7.1.14",
-    "expo": "~53.0.17",
+    "@react-navigation/native-stack": "^7.3.21",
+    "expo": "53.0.18",
+    "expo-blur": "^14.1.5",
     "expo-font": "^13.3.2",
     "expo-linear-gradient": "~14.1.5",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
+    "react-native-safe-area-context": "~5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2"
   },
