--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "dev": "expo start --dev-client"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/messaging": "^22.4.0",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
-    "expo": "53.0.18",
+    "expo": "53.0.20",
     "expo-blur": "^14.1.5",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "^13.3.2",
     "expo-linear-gradient": "~14.1.5",
     "expo-splash-screen": "~0.30.10",
@@ -29,7 +33,8 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "~5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "expo-system-ui": "~5.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
