--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^11.10.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-background-fetch": "^4.2.8",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-gifted-charts": "^1.4.63",
     "react-native-reanimated": "~3.17.4",
