--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,4 @@ yarn-error.*
 *.tsbuildinfo
 
 **/householdenergymonitoringapp-firebase-adminsdk-fbsvc-b7ab9cb89b.json
-google-services.json
+**/google-services.json
