adding google-services to android/app

--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,10 @@
       "distribution": "internal"
     },
     "production": {
-      "distribution": "store"
+      "distribution": "store",
+      "hooks": {
+        "prebuild": "node scripts/create-google-services.js"
+      }
     }
   }
 }
