--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
     <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id" android:value="default_channel" tools:replace="android:value" />
     <activity android:name=".MainActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|uiMode" android:launchMode="singleTask" android:windowSoftInputMode="adjustResize" android:theme="@style/Theme.App.SplashScreen" android:exported="true" android:screenOrientation="portrait">
       <service android:name="com.transistorsoft.rnbackgroundfetch.HeadlessTask" android:permission="android.permission.BIND_JOB_SERVICE" android:exported="true"/>
-      <receiver android:enabled="true" android:exported="true" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+      <receiver   android:name="com.transistorsoft.rnbackgroundfetch.BootBroadcastReceiver" android:enabled="true" android:exported="true" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
         <intent-filter>
           <action android:name="android.intent.action.BOOT_COMPLETED" />
           <action android:name="android.intent.action.REBOOT" />
