--- a/app.json
+++ b/app.json
@@ -16,9 +16,9 @@
       }
     },
     "splash": {
-      "image": "./assets/images/logo.png",
+      "image": "./assets/images/lightbulb.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#f3f3f3"
     },
     "ios": {
       "supportsTablet": true
@@ -26,7 +26,7 @@
     "android": {
       "usesCleartextTraffic": true,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/logo.png",
+        "foregroundImage": "./assets/images/lightbulb.png",
         "backgroundColor": "#f3f3f3"
       },
       "edgeToEdgeEnabled": true,
