new build changes

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ yarn-error.*
 
 **/householdenergymonitoringapp-firebase-adminsdk-fbsvc-b7ab9cb89b.json
 **/google-services.json 
+**/google-services.base64
