--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "dev": "expo start --dev-client"
+    "dev": "expo start --dev-client",
+    "prebuild": "node scripts/create-google-services.js"
   },
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
