--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ yarn-error.*
 **/householdenergymonitoringapp-firebase-adminsdk-fbsvc-b7ab9cb89b.json
 **/google-services.json 
 **/google-services.base64
+
+android/
