--- a/eas.json
+++ b/eas.json
@@ -4,13 +4,13 @@
       "developmentClient": true,
       "distribution": "internal",
       "env": {
-        "GOOGLE_SERVICES_JSON": "GOOGLE_SERVICES_JSON"
+        "GOOGLE_SERVICES_JSON": "$GOOGLE_SERVICES_JSON"
       }
     },
     "production": {
       "distribution": "store",
       "env": {
-        "GOOGLE_SERVICES_JSON": "GOOGLE_SERVICES_JSON"
+        "GOOGLE_SERVICES_JSON": "$GOOGLE_SERVICES_JSON"
       }
     }
   }
