--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "dev": "expo start --dev-client",
-    "prebuild": "node scripts/create-google-services.js"
+    "eas-build-pre-install": "node ./scripts/create-google-services.js"
   },
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
