eas build in preview mode changes

--- a/eas.json
+++ b/eas.json
@@ -7,8 +7,20 @@
         "GOOGLE_SERVICES_JSON": "$GOOGLE_SERVICES_JSON"
       }
     },
+    "preview": {
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk"
+      },
+      "env": {
+        "GOOGLE_SERVICES_JSON": "$GOOGLE_SERVICES_JSON"
+      }
+    },
     "production": {
       "distribution": "store",
+      "android": {
+        "buildType": "app-bundle"
+      },
       "env": {
         "GOOGLE_SERVICES_JSON": "$GOOGLE_SERVICES_JSON"
       }
