preview build changes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,6 +128,10 @@ Project background_fetch = project(':react-native-background-fetch')
     androidResources {
         ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:!CVS:!thumbs.db:!picasa.ini:!*~'
     }
+    lint {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 // Apply static values from `gradle.properties` to the `android.packagingOptions`
